--- a/views/Edit.hbs
+++ b/views/Edit.hbs
@@ -1,3 +1,5 @@
-<form action="/edit?id={{this.id}}" method="post">
-<input type="text" placeholder="Editor" name="eddata"/>
-<button type="submit">Edit</button> </form>
+<div><center>
+<form action="/edit?id={{this.id}}" method="post" >
+<input type="text" placeholder="Editor" name="eddata" class="textbox"/>
+<button type="submit" class = "send">Edit</button> </form>
+</center></div>
