--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,11 +6,9 @@ src:
   font-weight: normal;
   font-style: normal;
 }
-html{
+
+body{
   background-image: linear-gradient(to top, #7393cf 0%, #bac8e0 100%);
-}
-box{
-  height: 200%;
 }
 
   button.send{
@@ -34,7 +32,20 @@ box{
     width: 500px;    
     background-color: #f5f5f5;
   }
+  a.del{
+  position: absolute;
+  right: 10px;
+  color: #aaac2e;
+  text-decoration: none;
+  text-align: center;
+  padding: 2px 10px;
+  display: inline;
+  font-family: "OpenSans-BoldItalic",sans-serif;
+  border: 1px solid #ec561b;
+  }
   a.ed{
+  position: absolute;
+  right: 110px;
   color: #aaac2e;
   text-decoration: none;
   text-align: center;
