--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <ul class = "List">
 {{#each list}}
-<p>{{this.value}}  <a href="/edit?id={{this.id}}" class="ed">Edit</a> <a href="/delete?id={{this.id}}" class="ed">Delete</a></p>
+<p>{{this.value}}  <a href="/edit?id={{this.id}}" class="ed">Edit</a> <a href="/delete?id={{this.id}}" class="del">Delete</a></p>
 {{/each}}
 </ul>
 <div><center>
