--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,6 +9,8 @@ src:
 
 body{
   background-image: linear-gradient(to top, #7393cf 0%, #bac8e0 100%);
+  min-height: 100vh;
+  margin: 0;
 }
 
   button.send{
@@ -23,7 +25,7 @@ body{
   font-size: 25px;
   }
 
-  .box{
+  .box_list{
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -61,7 +63,7 @@ body{
     font-family: "OpenSans-SemiBoldItalic", sans-serif;
   }
 
-  input.textbox{
+  input.textbox_add_or_ed{
     margin-top: 7px;
     padding-top: 6px;
     padding-bottom: 6px;
