--- a/views/Edit.hbs
+++ b/views/Edit.hbs
@@ -1,5 +1,5 @@
 <div><center>
 <form action="/edit?id={{this.id}}" method="post" >
-<input type="text" placeholder="Editor" name="eddata" class="textbox"/>
+<input type="text" placeholder="Editor" name="eddata" class="textbox_add_or_ed"/>
 <button type="submit" class = "send">Edit</button> </form>
 </center></div>
