--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <div class = "box">
+    <div class = "box_list">
 	  {{{body}}}
     </div>
   </div>
