--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
 </ul>
 <div><center>
 <form action="/add" method="post">
-<input type="text" placeholder="Data" name="data" class="textbox"/>
+<input type="text" placeholder="Data" name="data" class="textbox_add_or_ed"/>
 <button type="submit" class = "send">Send</button>
 </form>
 </center>
