--- a/views/Edit.hbs
+++ b/views/Edit.hbs
@@ -1,3 +1,4 @@
+<h2><center>{{this.time}}</center></h2>
 <div><center>
 <form action="/edit?id={{this.id}}" method="post" >
 <input type="text" placeholder="Editor" name="eddata" class="textbox_add_or_ed"/>
