--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,10 +6,36 @@ src:
   font-weight: normal;
   font-style: normal;
 }
-h2{
-  padding-top: 6px;
-  font-size: 25px;
-  font-family: "OpenSans-ExtraBoldItalic", sans-serif;
+div.value_item{
+margin-top: 4px;
+width: 300px;
+height: 25px;
+font-family: Open Sans;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 20px;
+color: #000000;
+display: inline-block;
+}
+
+div.item_box{
+padding-top: 2px;
+background-color: #81e3e3;
+width: 430px;
+margin-top: 10px;
+border-radius: 3px;
+padding-left: 3px;
+}
+
+div.date{
+font-family: Open Sans;
+font-style: normal;
+font-weight: bold;
+font-size: 25px;
+line-height: 34px;
+text-align: center;
+color: #000000;
 }
 
 body{
@@ -19,60 +45,61 @@ body{
 }
 
   button.send{
-    color: #aaac2e;
-    
-  text-decoration: none;
+  color: #ffffff;
   text-align: center;
-  padding: 3px 10px;
-  display: inline;
-  font-family: "OpenSans-BoldItalic",sans-serif;
-  border: 1px solid #ec561b;
+  width: 60px;
+height: 40px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 34px;
+  background: #6664FF;
+border-radius: 3px;
   font-size: 25px;
   }
 
   .box_list{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: 100px;
     position: relative;
     box-sizing: border-box;
     width: 500px;    
-    background-color: #f5f5f5;
+    background: #F4F7FC;
+    border-radius: 4px;
+    padding-bottom: 20px;
+    padding-top: 50px;
   }
   a.del{
-  position: absolute;
-  right: 10px;
-  color: #aaac2e;
-  text-decoration: none;
-  text-align: center;
-  padding: 2px 10px;
-  display: inline;
-  font-family: "OpenSans-BoldItalic",sans-serif;
-  border: 1px solid #ec561b;
+    width: 18px;
+    height: 18px;
   }
   a.ed{
-  position: absolute;
-  right: 110px;
-  color: #aaac2e;
-  text-decoration: none;
-  text-align: center;
-  padding: 2px 10px;
-  display: inline;
-  font-family: "OpenSans-BoldItalic",sans-serif;
-  border: 1px solid #ec561b;
+  width: 18px;
+  height: 18px;
   }
-
-  p {
-    padding-top: 6px;
-    font-size: 25px;
-    font-family: "OpenSans-SemiBoldItalic", sans-serif;
-  }
-
   input.textbox_add_or_ed{
-    margin-top: 7px;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    box-sizing: border-box;
+    border-radius: 3px;
+    width: 290px;
+    height: 40px;
+    margin-top: 30px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     margin-bottom: 7px;
-    font-size: 25px;
-    font-family: "OpenSans-SemiBoldItalic", sans-serif;
+    padding-left: 20px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 20px; 
+  }
+  div.buttons_ed_del{
+    margin-top: 5px;
+    position: absolute;
+    right: 35px;
+    display: inline-block;
   }
