--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
 </form>
 </center>
 </div>
+<div class="items_count">Количество элементов: {{this.count}}</div>
 <ul class = "List">
 {{#each this.list}}
 <div class="item_box">
