--- a/views/Edit.hbs
+++ b/views/Edit.hbs
@@ -1,6 +1,3 @@
-<div class="date"><center>{{this.time}}</center></div>
-<div><center>
-<form action="/edit?id={{this.id}}" method="post" >
-<input type="text" placeholder="Editor" name="eddata" class="textbox_add_or_ed"/>
-<button type="submit" class = "send"><img src="/static/svg_files/edit_pencil.svg"></button> </form>
-</center></div>
+<div>
+    {{>form typeOfLink = 'edit' typeOfLink_is_edit = true}}
+</div>
