--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="box_list">
-      {{{body}}}
-    </div>
+  <div class="main_container">
+    {{{body}}}
   </div>
 </body>
 
