--- a/views/Edit.hbs
+++ b/views/Edit.hbs
@@ -1,3 +1,3 @@
 <div>
-    {{>form typeOfLink = 'edit' typeOfLink_is_edit = true}}
+    {{>form typeOfLink = 'edit' typeOfLink_is_edit = true buttonClass = "edit_confirm_button" placeholder = value }}
 </div>
