--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,27 +13,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-container {
-  position: absolute;
   display: block;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
   background: #f4f7fc;
   box-sizing: border-box;
   border-radius: 4px;
   padding: 50px 20px;
   width: 400px;
-  margin-top: 30px;
+  margin: 50px 0;
 }
 
 .main-container__date {
-  width: 300px;
-  height: 34px;
-  position: relative;
   font-weight: bold;
   font-size: 25px;
   line-height: 34px;
@@ -50,7 +46,7 @@ body {
   justify-content: center;
 }
 
-.input-container__textbox-add-edit{
+.input-container__input {
   background: #ffffff;
   box-sizing: border-box;
   border-radius: 3px;
@@ -65,7 +61,7 @@ body {
   margin-right: 10px;
   align-self: center;
 }
-.input-container__add-button {
+.input-container__button {
   padding: 0;
   border: none;
   align-self: center;
@@ -76,68 +72,64 @@ body {
   background-repeat: no-repeat;
   background-color: #6664ff;
   color: white;
-  background-image: url(/static/svg_files/plus.svg);
   background-size: 30%;
 }
+
+.input-container__button_icon_plus {
+  background-image: url(/static/svg_files/plus.svg);
+}
+
+.input-container__button_icon_confirm {
+  background-image: url(/static/svg_files/edit_confirm.svg);
+}
+
 .main-container__items-count {
-  position: relative;
-  margin-bottom: 0;
   margin-top: 30px;
-  width: 220px;
-  height: 16px;
-  font-weight: normal;
   font-size: 12px;
   margin-bottom: 10px;
 }
 
 .list-container {
-  margin-top: 10px;
   background: #e0e8f5;
   border-radius: 3px;
-  width: 360px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: row;
   height: 44px;
+  padding: 0 20px;
+}
+
+.list-container:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .list-container__value {
   font-weight: normal;
   font-size: 15px;
   line-height: 20px;
-  padding: 12px 20px;
 }
 
-.list-container__buttons-group {
-  position: absolute;
-  right: 40px;
-}
-.list-container__buttons-group__edit-button {
+.list-container__action {
   display: inline-block;
-  margin-right: 10px;
   width: 18px;
   height: 18px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.list-container__action_indent-l {
+  margin-left: 10px;
+}
+
+.list-container__action_icon_edit {
   background-image: url(/static/svg_files/edit_pencil.svg);
 }
 
-.list-container__buttons-group__delete-button {
-  display: inline-block;
-  width: 16px;
-  height: 18px;
+.list-container__action_icon_delete {
   background-image: url(/static/svg_files/delete_button.svg);
 }
 
-.input-container__edit-button {
-  padding: 0;
-  border: none;
-  align-self: center;
-  width: 60px;
-  height: 40px;
-  border-radius: 3px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #6664ff;
-  color: white;
-  background-image: url(/static/svg_files/edit_confirm.svg);
-  background-size: 30%;
+.list-container__buttons-group__edit-button {
+  margin-right: 10px;
 }
