--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,14 +3,14 @@
         {{time}}
     </div>
     <div>
-        {{>form typeOfLink = 'add' typeOfLink_is_edit = false placeholder = "Add" buttonClass = "input-container__add-button"}}
+        {{>form typeOfLink = 'add' typeOfLink_is_edit = false placeholder = "Add" buttonClass = "input-container__button_icon_plus"}}
     </div>
     <div class="main-container__items-count">Количество элементов: {{list.length}}</div>
     {{#each this.list}}
     <div class="list-container">
         <div class="list-container__value">{{this.value}}</div>
-        <div class="list-container__buttons-group"><a href="/edit?id={{id}}" class="list-container__buttons-group__edit-button"></a>
-            <a href="/delete?id={{id}}" class="list-container__buttons-group__delete-button"></a></div>
+        <div><a href="/edit?id={{id}}" class="list-container__action list-container__action_icon_edit"></a>
+            <a href="/delete?id={{id}}" class="list-container__action list-container__action_icon_delete list-container__action_indent-l"></a></div>
     </div>
     {{/each}}
 </div>
